--- a/MerlionPortal/MerlionPortal-war/web/crms/uploadsignedcontract.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/uploadsignedcontract.xhtml
@@ -57,7 +57,7 @@
         <ui:define name="right">
             <p:breadCrumb>
                 <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
-                <p:menuitem value="View All Orders" url="viewallservicepos.xhtml" />
+                <p:menuitem value="View All Contracts" url="viewallcontracts.xhtml" />
                 <p:menuitem value="Upload Signed Contract" url="uploadsignedcontract.xhtml" />
             </p:breadCrumb>
             <h:form enctype="multipart/form-data">
