--- a/MerlionPortal/MerlionPortal-war/web/wms/addstock.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addstock.xhtml
@@ -20,46 +20,46 @@
         </ui:define>
 
         <ui:define name="left">
-             <p:menu styleClass="menu-width">
-                    <p:submenu label =" WMS HOME" styleClass="display:block">
-                        <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
-                    </p:submenu>
-                    <p:submenu label =" Warehouse" styleClass="display:block">
-                        <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
-                        <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Warehouse Zone" styleClass="display:block" >
-                        <p:menuitem value="Add Warehouse Zone" url="addwarehousezone.xhtml" />
-                        <p:menuitem value="View Warehouse Zones" url="viewwarehousezone.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Storage Bin" styleClass="display:block" >
-                        <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
-                        <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Stock" styleClass="display:block" >
-                        <p:menuitem value="Add Stock" url="addstock.xhtml"/>
-                        <p:menuitem value="View Stock" url="viewstock.xhtml"/>
-                    </p:submenu>
-                    <p:submenu label="Stock Audit" styleClass="display:block" >
-                        <p:menuitem value="Create Stock Audit" url="createstockaudit.xhtml"/>
-                        <p:menuitem value="View All Stock Audits" url="viewallstockaudit.xhtml"/>
-                        <p:menuitem value="View Today's Stock Audits" url="viewduestockaudit.xhtml"/>
-                    </p:submenu>
-                    <p:submenu label="Stock Transport Order" styleClass="display:block" >
-                        <p:menuitem value="Create Transport Order" url="createtransportorder.xhtml"/>
-                        <p:menuitem value="View Transport Order To Be Procssed" url="viewsourcetransportorder.xhtml"/>
-                        <p:menuitem value="All IncomingTransport Orders" url="viewdesttransportorder.xhtml"/>
-                    </p:submenu>
-                    <p:submenu label="Warehouse Space Request Orders" styleClass="display:block" >
-                        <p:menuitem value="All Pending Request" url="viewallpendingrequests.xhtml"/>
-                    </p:submenu>
-                    <p:submenu label="Warehouse Service Fulfillment Check" >
-                        <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="View Notification" >
-                        <p:menuitem value="View Notification" url="viewallnotification.xhtml" />
-                    </p:submenu>
-                </p:menu>
+            <p:menu styleClass="menu-width">
+                <p:submenu label =" WMS HOME" styleClass="display:block">
+                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
+                </p:submenu>
+                <p:submenu label =" Warehouse" styleClass="display:block">
+                    <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
+                    <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
+                </p:submenu>
+                <p:submenu label="Warehouse Zone" styleClass="display:block" >
+                    <p:menuitem value="Add Warehouse Zone" url="addwarehousezone.xhtml" />
+                    <p:menuitem value="View Warehouse Zones" url="viewwarehousezone.xhtml" />
+                </p:submenu>
+                <p:submenu label="Storage Bin" styleClass="display:block" >
+                    <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+                    <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+                </p:submenu>
+                <p:submenu label="Stock" styleClass="display:block" >
+                    <p:menuitem value="Add Stock" url="addstock.xhtml"/>
+                    <p:menuitem value="View Stock" url="viewstock.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Stock Audit" styleClass="display:block" >
+                    <p:menuitem value="Create Stock Audit" url="createstockaudit.xhtml"/>
+                    <p:menuitem value="View All Stock Audits" url="viewallstockaudit.xhtml"/>
+                    <p:menuitem value="View Today's Stock Audits" url="viewduestockaudit.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Stock Transport Order" styleClass="display:block" >
+                    <p:menuitem value="Create Transport Order" url="createtransportorder.xhtml"/>
+                    <p:menuitem value="View Transport Order To Be Procssed" url="viewsourcetransportorder.xhtml"/>
+                    <p:menuitem value="All IncomingTransport Orders" url="viewdesttransportorder.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Warehouse Space Request Orders" styleClass="display:block" >
+                    <p:menuitem value="All Pending Request" url="viewallpendingrequests.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Warehouse Service Fulfillment Check" >
+                    <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
+                </p:submenu>
+                <p:submenu label="View Notification" >
+                    <p:menuitem value="View Notification" url="viewallnotification.xhtml" />
+                </p:submenu>
+            </p:menu>
         </ui:define>
 
 
@@ -121,22 +121,18 @@
                             <f:validateLength minimum="1" maximum="25" />
                         </p:inputText>
 
-                        <p:outputLabel for="comments" style="font-weight: bold" value="Comments:   *" /><p:spacer width="40" height="20" />
+                        <p:outputLabel for="comments" style="font-weight: bold" value="Comments:   " /><p:spacer width="40" height="20" />
                         <p:inputText required="true" label="comments" requiredMessage="Comments is required." id="comments" value="#{createStockManagedBean.comments}">
                             <f:validateLength minimum="1" maximum="200" />
                         </p:inputText>
 
-                        <p:outputLabel for="quantity" style="font-weight: bold" value="Quantity:   *" /><p:spacer width="40" height="20" />
+                        <p:outputLabel for="quantity" style="font-weight: bold" value="Quantity:   " /><p:spacer width="40" height="20" />
                         <p:inputText required="true" label="quantity" requiredMessage="Quantity is required." id="quantity" value="#{createStockManagedBean.quantity}">
                             <f:validateLength minimum="1" maximum="19" />
                         </p:inputText>
 
-                        <!--                        <p:row>
-                                                    <p:column>
-                                                        <h:outputLabel for="expiryDate" style="font-weight: bold" value="Expiry Date: (Please leave blank if Not Applicable)" />
-                                                        <p:calendar id="expiryDate" value="#{createStockManagedBean.expiryDate}" />
-                                                    </p:column>
-                                                </p:row>-->
+                        <h:outputLabel for="expiryDate" style="font-weight: bold" value="Expiry Date: " /><p:spacer width="40" height="20" />
+                        <p:calendar id="expiryDate" value="#{createStockManagedBean.expiryDate}" />
                     </h:panelGrid>
 
                     <h:panelGrid columns="1">
